--- a/themes/foundation/store/templates/helper/recommended-products.twig
+++ b/themes/foundation/store/templates/helper/recommended-products.twig
@@ -1,3 +1,4 @@
+{#@TODO add flag for show 'add to cart' button#}
 {% if products is not empty %}
     <h2 class="text-center">{% block title %}You Might Also Like{% endblock %}</h2>
     <div class="row {% block blockSizes %}small-up-2 medium-up-3 large-up-4{% endblock %}">
