--- a/themes/foundation/store/templates/product/show.twig
+++ b/themes/foundation/store/templates/product/show.twig
@@ -9,14 +9,14 @@
 
 
     <div class="row">
-        <div class="medium-4 columns">
+        <div class="medium-3 columns">
             <img class="thumbnail" src="{{ productImageUrl(product) }}">
             <div class="row small-up-4">
                 {% for image in product.images %}
                     {% if image.path != product.defaultImage %}
                         <div class="column">
                             <a href="{{ image.pathUrl }}">
-                                <img src="{{ image.pathUrl }}"/>
+                                <img src="{{ image.pathUrl }}" style="min-width:50px"/>
                             </a>
                         </div>
                     {% endif %}
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="medium-8 columns">
+        <div class="medium-6 columns">
             <h3>{{ product.name }}</h3>
 
             {% if product.description is not empty %}
@@ -56,7 +56,7 @@
             {% endif %}
         </div>
 
-        <div class="medium-8 medium-offset-4 column">
+        <div class="medium-3 column">
 
             {% if product.isInventoryRequired %}
                 Availability:
@@ -100,15 +100,15 @@
                 </form>
             {% endif %}
 
-            <div class="small secondary expanded button-group">
-                <a href="https://www.facebook.com/sharer/sharer.php?u={{ product.fullUrl }}"
-                   class="button"
-                   target="_blank">
-                    <i class="fa fa-facebook"></i> Facebook
-                </a>
-                <a class="button">Twitter</a>
-                <a class="button">Yo</a>
-            </div>
+            {#<div class="small secondary expanded button-group">#}
+                {#<a href="https://www.facebook.com/sharer/sharer.php?u={{ product.fullUrl }}"#}
+                   {#class="button"#}
+                   {#target="_blank">#}
+                    {#<i class="fa fa-facebook"></i> Facebook#}
+                {#</a>#}
+                {#<a class="button">Twitter</a>#}
+                {#<a class="button">Yo</a>#}
+            {#</div>#}
 
         </div>
     </div>
