--- a/themes/foundation/store/scss/_settings.scss
+++ b/themes/foundation/store/scss/_settings.scss
@@ -46,8 +46,8 @@
 //// ---------
 //
 //$global-font-size: 100%;
-//$global-width: 100%;
-//$global-lineheight: 1.5;
+$global-width: 100%;
+$global-lineheight: 1.5;
 //$foundation-palette: (
 //        primary: #1779ba,
 //        secondary: #767676,
