--- a/themes/foundation/store/templates/layout/base-checkout.twig
+++ b/themes/foundation/store/templates/layout/base-checkout.twig
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
     {% include '@store/layout/parts/head.twig' with {
-        'pageTitle': block('pageTitle'),
-        'pageDescription': block('pageDescription'),
-        'pageCanonicalUrl': block('pageCanonicalUrl')
+    'pageTitle': block('pageTitle'),
+    'pageDescription': block('pageDescription'),
+    'pageCanonicalUrl': block('pageCanonicalUrl')
     } %}
 </head>
-<body>
-    {% include '@store/layout/parts/header-checkout.twig' %}
+<body class="zk-body">
+{% include '@store/layout/parts/header-checkout.twig' %}
+<main class="zk-main-content">
+    {% include '@store/layout/parts/base-modal.twig' %}
     {% include '@store/layout/parts/flash-messages.twig' %}
     {% include '@store/layout/parts/breadcrumbs.twig' %}
-    <div id="body">
-        {% block content %}{% endblock %}
-    </div>
-    {% include '@store/layout/parts/base-modal.twig' %}
-    {% include '@store/layout/parts/footer-checkout.twig' %}
+    {% block content %}{% endblock %}
+</main>
+{% include '@store/layout/parts/footer-checkout.twig' %}
+{% include '@store/layout/parts/javascript.twig' %}
+
+{% block extraScripts %}{% endblock %}
 </body>
 </html>
