--- a/themes/foundation/store/templates/layout/parts/header-checkout.twig
+++ b/themes/foundation/store/templates/layout/parts/header-checkout.twig
@@ -1,13 +1,52 @@
-<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-  <button class="menu-icon" type="button" data-toggle="example-menu"></button>
-  <div class="title-bar-title">Menu</div>
-</div>
+<header class="zk-menu">
+    <nav class="zk-title-bar title-bar" data-responsive-toggle="zk-js-topbar" data-hide-for="medium">
+        <button class="menu-icon" type="button" data-toggle></button>
+        <div class="title-bar-title">{{ SITE_NAME | default('Kommerce Foundation') }}</div>
+    </nav>
 
-<div class="top-bar" id="zk-menu-checkout">
-  <div class="top-bar-right">
-    <ul class="menu">
-        <li><a href="{{ routeUrl('user.login') }}">Sign In</a></li>
-        <li><a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-    </ul>
-  </div>
-</div>
+    <nav id="zk-js-topbar">
+        <div class="zk-topbar-search top-bar">
+            <div class="top-bar-left">
+                <ul class="dropdown menu" data-dropdown-menu>
+                    <li class="menu-text hide-for-small-only">
+                        <a class="zk-topbar-brand" href="{{ routeUrl('home') }}">
+                            {{ SITE_NAME | default('Kommerce Foundation') }}
+                        </a>
+                    </li>
+                    <li style="width:50%">
+                        <div class="input-group">
+                            <input class="input-group-field" type="search" placeholder="Search" style="min-width:100%;">
+                            <div class="input-group-button">
+                                <input type="submit" class="button" value="Search">
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="top-bar-right">
+                <ul class="menu">
+                    <li>
+                        <a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a>
+                    </li>
+                    {% if user is not empty %}
+                        <li>
+                            <form action="{{ routeUrl('user.logout') }}"
+                                  method="post">
+                                {{ form.csrf() }}
+                                <button type="submit" class="btn btn-link">Sign Out</button>
+                            </form>
+                        </li>
+                        <li class="divider-vertical hidden-xs"></li>
+                        <li>
+                            <a href="{{ routeUrl('user.account') }}">Account</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="{{ routeUrl('user.login') }}">Sign In</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
