Cleaning up several cart pages for mobile.

--- a/themes/foundation/admin/templates/product/parts/actions.twig
+++ b/themes/foundation/admin/templates/product/parts/actions.twig
@@ -3,11 +3,11 @@
 <div class="row column">
     <div class="callout">
         <div class="row">
-        <div class="medium-6 columns">
+        <div class="small-12 medium-6 columns">
             <img src="{{ productImageUrl(product) }}">
         </div>
 
-        <div class="medium-6 columns">
+        <div class="small-12 medium-6 columns">
             <h4>Product - {{ product.name }}</h4>
             <form action="{{ routeUrl('admin.product.delete') }}"
                     method="post"
