--- a/themes/foundation/store/scss/layout/_topbar.scss
+++ b/themes/foundation/store/scss/layout/_topbar.scss
@@ -1,13 +1,15 @@
-//.zk-topbar-search {
-//  padding-bottom: 0;
-//}
-//
-//.zk-topbar-brand {
-//  position: relative;
-//  top: -6px;
-//  padding: 0 !important;
-//}
-//
-//.zk-topbar-menu {
-//  padding-top: 0;
-//}
+.zk-topbar-search {
+  padding-bottom: 0;
+}
+
+.zk-topbar-menu {
+  padding-top: 0;
+}
+
+@include breakpoint(medium) {
+  .zk-topbar-brand {
+    position: relative;
+    top: -6px;
+    padding: 0 !important;
+  }
+}
