Nice progress on the added to cart screen.

--- a/themes/foundation/store/scss/_settings.scss
+++ b/themes/foundation/store/scss/_settings.scss
@@ -48,13 +48,13 @@
 //$global-font-size: 100%;
 $global-width: 100%;
 $global-lineheight: 1.5;
-//$foundation-palette: (
-//        primary: #1779ba,
-//        secondary: #767676,
-//        success: #3adb76,
-//        warning: #ffae00,
-//        alert: #cc4b37,
-//);
+$foundation-palette: (
+        primary: #20A39E,
+        secondary: #D6D9DB,
+        success: #6BF178,
+        warning: #E8C547,
+        alert: #F95738,
+);
 //$light-gray: #e6e6e6;
 //$medium-gray: #cacaca;
 //$dark-gray: #8a8a8a;
