--- a/themes/foundation/store/scss/main.scss
+++ b/themes/foundation/store/scss/main.scss
@@ -1,6 +1,8 @@
 @import "settings";
 @import "vendor/foundation-sites";
 
+@import "mixins/flex";
+
 @import "layout/base";
 @import "layout/topbar";
 
