--- a/themes/foundation/store/scss/cart/_added.scss
+++ b/themes/foundation/store/scss/cart/_added.scss
@@ -1,27 +1,51 @@
-.zk-media-object {
-  img {
-    max-height: 100px;
+.zk-cart-added {
+  border: {
+    top: 1px solid $light-gray;
+    bottom: 1px solid $light-gray;
+  }
+
+  > h2 {
+    text-align: center;
+  }
+
+  .zk-media-object {
+    margin-bottom: 0;
+
+    img {
+      max-height: 75px;
+    }
   }
 }
+
 
 .zk-cart-subtotal {
   font-size: 1.4rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid $light-gray;
-  min-height: rem-calc(125);
+  padding: rem-calc(15 0);
+
+  @include breakpoint(small only) {
+    flex-direction: column;
+  }
+
+  .zk-cart-1,
+  .zk-cart-2 {
+    padding-right: 0.4rem;
+  }
+
+  .zk-cart-3 {
+    color: $alert-color;
+    font-weight: bold;
+    padding-right: 1rem;
+  }
 }
 
-.zk-cart-1,
-.zk-cart-2 {
-  padding-right: 0.4rem;
-}
-
-.zk-cart-3 {
-  color: $alert-color;
-  font-weight: bold;
-  padding-right: 1rem;
+.zk-added-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .zk-cart-subtotal-menu {
